# models/conocimiento_idioma.go
@@ -5,9 +5,9 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
-	"time"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type ConocimientoIdioma struct {
@@ -20,6 +20,7 @@ type ConocimientoIdioma struct {
 	NivelHabla               *ValorNivelIdioma         `orm:"column(nivel_habla);rel(fk)"`
 	Nativo                   bool                      `orm:"column(nativo)"`
 	ClasificacionNivelIdioma *ClasificacionNivelIdioma `orm:"column(clasificacion_nivel_idioma);rel(fk)"`
+	FechaCreacion            string                    `orm:"column(fecha_creacion);null"`
 	FechaModificacion        string                    `orm:"column(fecha_modificacion);null"`
 }
 
@@ -34,9 +35,8 @@ func init() {
 // AddConocimientoIdioma insert a new ConocimientoIdioma into database and returns
 // last inserted Id on success.
 func AddConocimientoIdioma(m *ConocimientoIdioma) (id int64, err error) {
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
+	m.FechaCreacion = time_bogota.TiempoBogotaFormato()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -132,9 +132,7 @@ func GetAllConocimientoIdioma(query map[string]string, fields []string, sortby [
 func UpdateConocimientoIdiomaById(m *ConocimientoIdioma) (err error) {
 	o := orm.NewOrm()
 	v := ConocimientoIdioma{Id: m.Id}
-	var t time.Time
-	t = time.Now()
-	m.FechaModificacion = fmt.Sprintf("%s", t.UTC().Format(time.UnixDate))
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
